--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,2 @@
 1.0.0
-    - Initial commit with capturing moved into separate repo
+    - Initial commit moving capture.js out of the mobifyjs repo
