--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.0.4
+    - Fix scroll issue regression with iOS9 (PR #9)
+    - Rename package to mobify-capturejs to avoid conflict with capturejs npm
+      package
+
 1.0.3
     - Fix issues with having <body> in a script tag above the real
       body tag.
