--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.5
+    - iOS8+ scroll fix is applied only when rendering an adapted document,
+      resolving an issue with meta viewport tags and restored documents (PR #11)
 1.0.4
     - Fix scroll issue regression with iOS9 (PR #9)
     - Rename package to mobify-capturejs to avoid conflict with capturejs npm
